--- a/vignettes/more/animals-simulate-missing-surveys.Rmd
+++ b/vignettes/more/animals-simulate-missing-surveys.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Animals: Simulate missing surveys"
-subtitle: "Visualise the reduction in number of animal species if surveys are missed."
+subtitle: "Visualise the reduction in number of animal species if surveys are missed"
 author: "Song, Xiao Ping"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
