--- a/vignettes/apply-models.Rmd
+++ b/vignettes/apply-models.Rmd
@@ -13,7 +13,7 @@ vignette: >
 
 ## Overview
 
-By following this vignette, users will be able to predict (using a user-provided model object) animal species richness across a target landscape, and eventually visualise the prediction using a heatmap.
+By following this vignette, users will be able to predict (using a user-provided model object) animal species richness across a target landscape, and eventually visualise the prediction using a heatmap. Begin by loading the required libraries and data files:
 
 ```{r load required libraries, eval = FALSE}
 library("biodivercity")
@@ -28,12 +28,19 @@ library("tmap")
 library("leaflet")
 ```
 
+```{r load bound geojson, eval=FALSE}
+filepath <- system.file("extdata", "pg_layers.Rdata", package = "biodivercity")
+load(filepath)
+
+mod_filepath <- system.file("extdata", "models-manually-mapped.Rdata", package = "biodivercity")
+load(mod_filepath)
+```
 
 ## Spatial predictions
 
-To make predictions across a large area, the target landscape is first broken up into many smaller points
+To make predictions across a large area, the target landscape is first broken up into many smaller points.`geom_to_grid` is first used to overlay a grid (see Fig. 1 for example) over a target area, demarcated by polygon object `bound`, where species richness predictions are desired. Grid dimensions are variable and can be specified with `grid_dim`. `buffer_dist` is an optional argument for situations where landscape data is limited to the target area or smaller. The distance value for this argument should correspond to the largest buffer present in the variables, so as to not include areas with no landscape data. 
 
-`geom_to_grid` is used to overlay a grid (see Fig. 1 for example) over a target area where species richness predictions are desired. This function is a wrapper for the `st_make_grid` function with `what == "centers"`, from the package `sf`. The output is an object of class `sfc` that comprises points around which landscape variables are extracted within their respective distance buffers. Grid dimensions are variable and can be specified with `grid_dim`. `buffer_dist` is an optional argument for situations where landscape data is limited to the target area or smaller. The distance value for this argument should correspond to the largest buffer present in the variables, so as to not include areas with no landscape data.
+This function is a wrapper for the `st_make_grid` function with `what == "centers"`, from the package `sf`. The output is an object of class `sfc` that comprises points around which landscape variables are extracted within their respective distance buffers. 
 
 ```{r create grid for each UGS town, eval = FALSE}
 # subset to regions where predictions can be made: >126m inwards from boundaries
@@ -43,13 +50,35 @@ bound_grid <- geom_to_grid(geom = bound,
 ```
 ![Fig. 1: Visualisation of the `geom_to_grid` function.](geom-to-grid.png){#id .class width=60% height=60%}
 
-The `heatmap_raster` function is a combination of multiple functions that result in a final raster of species richness predictions for one taxon. A breakdown of the function is as follows:
+Next, a final raster of species richness predictions for one taxon is made using the `heatmap_raster` function. Two important required arguments for `heatmap_raster` are `mods`, an averaged model object with which the user wants to make predictions, and `landscape`, a summary of the landscape variables around each of the points in `bound_grid`. A model object, `models_birds`, has already been loaded earlier. A suitable `landscape` object can be obtained from the various landscape vector layers (e.g. `natveg`, `turf`, etc.) using the `summarise_landscape_perpt` function:
+
+```{r grid landscape, eval = FALSE}
+
+natveg <- st_make_valid(natveg) # to make sure polygons are valid 
+
+grid_landscape <-
+  summarise_landscape_perpt(
+    points = bound_grid,
+    uid_column = "site_id",
+    species = "species",
+    layer_trees = trees, radii_trees = 50,
+    layer_shrubs = shrubs, radii_shrubs = 50,
+    layer_turf = turf, radii_turf = 50,
+    layer_natveg = natveg, radii_natveg = c(50, 126),
+    layer_water = water, radii_water = 50,
+    layer_buildings = buildings, radii_buildings = 50, buildings_levels = "building_l",
+    layer_roads = roads, radii_roads = c(50, 126), roads_lanes = "lanes")
+```
+
+For interested readers, a breakdown of the `heatmap_raster` function is as follows (half a mind to remove this part):
 
 1. Species richness is predicted at each point provided in the `geom` argument with the objects specified in `mods`, `env_df` and `landscape`.
 2. A second grid is created using `st_make_grid` with `what == "polygons"` as a template for the final raster.
 3. The grid template and prediction values are combined with `rasterize` from the `terra` package.
 
 **Note**: Variables used in `landscape` should match variables in `env_df`.
+
+
 
 ```{r heatmap_raster, eval = FALSE}
 # Minor edits to the env_df had to be made
