--- a/vignettes/process-animal.Rmd
+++ b/vignettes/process-animal.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Process Animal Data"
-subtitle: "Clean up and summarise data from animal surveys"
+subtitle: "Clean up data from animal surveys"
 author: "Edwin Tan"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
@@ -10,57 +10,119 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-## Dealing with data
-
-Collected fauna survey data in the format detailed in the previous section can be easily subset with respect to `town`, `round` and/or `priority` with the `filter_observations()` function. A second survey reference dataset is required for input to account for surveys with zero observations. For example, a specific set of surveys (i.e. butterfly surveys in Tampines from 2020-2021) can be filtered as follows.
-
 First, load the necessary packages to run the analysis:
 
 ```{r load required libraries, message = FALSE, warning = FALSE, eval = FALSE}
 library("biodivercity")
+library("dplyr") # data processing
 ```
 
 ```{r load biodivercity while in dev, include = FALSE}
 devtools::load_all()
 ```
 
-Load the example datasets and run the function `filter_observations()`.
+## Data format
 
-```{r filter_obs example, message = FALSE, warning = FALSE}
+Data from animal surveys can be organised into two separate tables: (1) a record of animal observations during each survey; and (2) reference information about each survey. The existence of (2) also ensures that surveys with zero animal observations are accounted for. Examples of data within the two tables are shown below:
+
+```{r sample data table, echo = FALSE, message = FALSE, warning = FALSE}
+
 data(animal_observations)
+
+knitr::kable(head(animal_observations), caption = "**Table: Example showing animal observations recorded during surveys.** Each row represents a unique observation at a specified time, which includes the species name and count (abundance) of individuals. Refer to `help(animal_observations)` for more information.") %>%
+  kableExtra::kable_styling("striped", font_size = 12, full_width = TRUE) %>%
+  kableExtra::scroll_box(width = "100%")
+```
+
+<br>
+
+```{r sample info table, echo = FALSE, message = FALSE}
+
 data(animal_surveys)
 
-filter_observations(observations = animal_observations, 
-                    survey_ref = animal_surveys,
-                    specify_taxon = "Lepidoptera",
-                    specify_area = "TP",
-                    specify_period = "2")
+knitr::kable(head(animal_surveys), caption = "**Table: Example showing the information recorded for each animal survey.** Each row represents a unique 30-minute survey. Refer to `help(animal_surveys)` for more information.") %>%
+  kableExtra::kable_styling("striped", font_size = 12, full_width = TRUE) %>% 
+  kableExtra::scroll_box(width = "100%")
 ```
+
+These example data are present in the package, and can be previewed by running the following code:
+
+```{r}
+data(animal_observations)
+head(animal_observations)
+```
+
+```{r}
+data(animal_surveys)
+head(animal_surveys)
+```
+
+<br>
+
+If necessary, the convenience function  `filter_observations()` may be used to filter the animal survey data based on specified grouping variables (e.g. `area`, `period`, `taxon`). For example, observations from bird (`Aves`) surveys in Tampines (`TP`) conducted during 2020-2021 (survey period `2`) can be filtered as follows:
+
+```{r filter_obs example, message = FALSE, warning = FALSE}
+
+observations_subset <- filter_observations(observations = animal_observations, 
+                                           survey_ref = animal_surveys,
+                                           specify_taxon = "Aves",
+                                           specify_area = "TP",
+                                           specify_period = "2")
+
+observations_subset
+```
+
+Note that the column `survey_id` will be converted to a factor variable, which includes levels that are not present in the observation data (i.e. no butterflies were observed during those surveys).
+
+<br>
 
 ---
 
-Checks can be performed to remove ambiguous fauna identifications to prevent over-counting of species. These observations are usually identifiable only to the Family or Genus level and should be recorded as such. The function `check_taxongrps()` returns a dataframe of species entries to be filtered out at the point/area level when all species of the specified Family or Genus across all points have been observed at the point/area of interest.
+## Data checks
 
-For example, there are two species of swallows observed across all points in the sample dataset, *Hirundo tahitica* and *Hirundo rustica*. *Hirundo spp.* is entered when the species cannot be identified with confidence.
+Checks can be performed to remove group-level observations, to prevent over-counting the number of species when summarising the data afterwards. For instance, if the _species_ name of an observed animal is unknown, surveyors may instead record such observations at a higher (group) level of classification, such as the _family_ or _genus_. However, this same species recorded as a group-level entry may also be identified correctly (at the species-level) during other surveys at the same point/area (e.g. by another surveyor). When the number of species is tallied at each point/area, it may result in a double-count of the particular animal species.
+
+For example, there are two species of swallows observed across all points in the example dataset–*Hirundo tahitica* and *Hirundo rustica*. *Hirundo spp.* is entered (in the `species` column) when the species cannot be identified with confidence: 
 
 ```{r check taxon groups 1, message = FALSE, warning = FALSE}
-animal_observations %>% 
-  dplyr::filter(stringr::str_detect(species, "Hirundo")) %>% 
-  group_by(area, taxon, period, species) %>% 
+observations_swallows <- observations_subset %>% 
+  filter(grepl("Hirundo", species)) %>% 
+  group_by(area, point_id, species, family, genus) %>% 
   summarise()
+
+observations_swallows
 ```
 
-If data entries containing *Hirundo spp.* are found in areas where both species appear in the same period, the function `check_taxongrps()` will flag `Hirundo spp.` for removal at the `area` level.
+This would result in an inflated value when tallying in the number of species per point/area, since _Hirundo spp._ is a unique entry in the `species` column. For example, in the example dataset, a total of three swallow species would be reported at `TP` (Tampines `area`), rather than the two known to be present in Singapore:
+
+```{r message = FALSE}
+observations_swallows %>% 
+  group_by(area, species) %>% # tally by area
+  summarise() %>%
+  summarise(n())
+```
+
+One way to avoid such double-counting is to remove these group-level entries if all species in that particular classification group are observed, at the specified granularity of interest (`point` or `area`). The function `check_taxongrps()` identifies such group-level entries, as well as the total number of species within that grouping level (by referring to the columns `genus` and `family`). For example, for our dataset of swallows at Tampines (`TP`), we can check the number of unique species within the _Hirundo spp._ genus and _Hirundinidae_ family:
+
+```{r}
+to_remove <- check_taxongrps(observations_swallows, level = "area")
+to_remove
+```
+
+These entries can subsequently be removed from the observational data `observations_swallows`, if they have been recorded in the `species` column: 
+
+```{r}
+filtered_observations <- observations_swallows %>%
+  anti_join(to_remove, by = c("species" = "name"))
+
+filtered_observations
+```
+
+To verify that these entries have been removed, we can re-tally the filtered observations; the number of species will be reduced by one:
 
 ```{r check taxon groups 2, message = FALSE, warning = FALSE}
-rmspp_town <- check_taxongrps(animal_observations, level = "area")
-
-filtered_observations <- animal_observations %>%
-  anti_join(rmspp_town, by = c("species" = "name", "period"))
-
 filtered_observations %>% 
-  dplyr::filter(stringr::str_detect(species, "Hirundo")) %>% 
-  group_by(area, taxon, period, species) %>% 
-  summarise()
-
+  group_by(area, species) %>% # tally by area
+  summarise() %>%
+  summarise(n())
 ```
