--- a/vignettes/more/animals-data-summaries.Rmd
+++ b/vignettes/more/animals-data-summaries.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Animals: Data summaries"
 subtitle: "Compare local diversity between sampled areas"
-author: "Author"
+author: "Song, Xiao Ping"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
@@ -10,109 +10,128 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-```{r, include = FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>"
-)
+Data generated from animal surveys can be summarised at multiple levels (e.g. area, period, animal groups), in order to make direct comparisons between these groups. For example, one may be interested in differences in the number of species between different areas, or across two different time periods. This article demonstrates how such summaries may be performed and visualised.
+
+First, load the necessary packages to run the analysis:
+
+```{r load required libraries, message = FALSE, warning = FALSE, eval = FALSE}
+library("biodivercity")
+library("dplyr") # data processing
+library("ggplot2") # data visualisation
 ```
 
-## Summarise survey data
+```{r load biodivercity while in dev, include = FALSE}
+devtools::load_all()
+library("dplyr") # data processing
+library("ggplot2") # data visualisation
+```
 
-Surveys are filtered to remove all surveys at sampling points that are surveyed less than three times. The remaining surveys are normalised by randomly removing sampling points from sampling zones to achieve similar point densities across all areas. Three surveys are then randomly selected per sampling point and taxon, and the removal process is repeated 30 times to obtain bootstrapped results. This normalised dataset is used to summarise species richness and species accumulation curves across sampling areas:
+<br>
 
-```{r sptally, eval = FALSE}
-# BY POINT
-normalised_perpt <- 
-  foreach(i = seq_along(fauna_normalised), 
-          .packages = "tidyverse") %dopar% {
- 
-  #get unique data to input to loop later
-  unique <- surveys_normalised[[i]] %>%
-    distinct(town, round, priority)
+## Summarise data 
+
+Load the example data. Refer to `help(animal_observations)` and `help(animal_surveys)` for more details on these datasets. 
+
+```{r}
+data("animal_observations")
+data("animal_surveys")
+```
+
+Next, define the unique combinations of the grouping variables of interest. These will be used to summarise the data. For example, animal surveys can be summarised for each of the six towns (column `area`), two survey periods (column `period`), as well as four animal groups (column `taxon`): 
+
+```{r}
+unique <- animal_surveys %>%
+  distinct(area, period, taxon) %>% 
+  arrange(area)
+
+unique
+```
+For each of these (rows of) unique combinations, calculate the species accumulation curve using the function `calculate_sac()`. Species accumulation curves provide useful information on how much sampling effort is required to be reasonably certain of the total number of species (‘gamma’ diversity) within a given sampling unit. In this example, they allow the number of species between different animal groups, areas and survey periods to be compared at the same amount of sampling effort, i.e., same point along the curves.
+
+```{r calculate sac, warning = FALSE, message = FALSE}
+
+plot_sac <- data.frame()
+
+for(i in 1:nrow(unique)){ # calculate for each row of 'unique'
   
-  results <- data.frame()
+  sac_data <- calculate_sac(observations = animal_observations, 
+                            survey_ref = animal_surveys,
+                            specify_area = unique$area[i], 
+                            specify_period = unique$period[i], 
+                            specify_taxon = unique$taxon[i])
   
-  for(j in 1:nrow(unique)){
-  
-    sptally_data <- 
-      tally_observations(observations = fauna_normalised[[i]],
-                        survey_ref = surveys_normalised[[i]],
-                        specify_town = unique$town[j], 
-                        specify_round = unique$round[j], 
-                        specify_priority = unique$priority[j],
-                        level = "point")
-    
-    # bind to plot_sac & overwrite
-    results <- results %>%
-      bind_rows(sptally_data)
-    
-    rm(sptally_data)
-  }
-            
-  results                     
+  # append results to plot_sac (overwrite), and order each grouping factor
+  plot_sac <- plot_sac %>%
+    bind_rows(sac_data) %>% 
+    mutate(area = factor(area, levels = c("PG", "QT", "TP", "JW", "BS", "WL"))) %>%
+    mutate(taxon = factor(taxon, levels = c("Aves", "Lepidoptera", "Odonata", "Amphibia"))) 
 }
 
-# summarise & stats
-normalised_perpt <- normalised_perpt %>% 
-  map_dfr(~ bind_rows(.), .id = "iteration") %>% # unlist 
-  mutate(iteration = as.numeric(iteration)) %>% 
-    
-  # add iteration-level summaries
-  group_by(iteration, 
-           town, round, priority) %>% 
-  summarise(mean = mean(n, na.rm = T) #,
-            #se = sd(n, na.rm = T)/sqrt(length(n))
-            ) %>% 
-  mutate(type = "Point") %>%
-  
-  # for plotting
-  mutate(town = factor(town, levels = c("PG", "QT", "TP","JW", "BS", "WL"))) %>%
-  mutate(priority = factor(priority, levels = c("Aves", "Lepidoptera", "Odonata","Amphibia"))) %>%
-  mutate(round = as.factor(round))
 ```
 
-![Mean species richness (no. of species) per sampling point and survey, for each town and taxon. The error bars denote two standard deviations of the mean across all iterations. Note that the scale of the y-axis varies between the plots.](sample-stacked-bar-plot.png){#id .class width=80% height=80%}
+The output `plot_sac` contains data points along the species accumulation curves, i.e., the estimated number of species (column `richness`) with increasing survey effort (column `sites`), as well as the standard deviation (column `sd`) for the estimates: 
 
-```{r sac, eval = FALSE}
-
-# loop across all bootstrapped iterations
-
-plot_sac <- 
-  foreach(i = seq_along(fauna), 
-          .packages = "tidyverse") %dopar% {
-  
-  unique <- surveys[[i]] %>%
-    distinct(town, round, priority)
-            
-  results <- data.frame()
-  
-  for(j in 1:nrow(unique)){
-    
-    sac_data <- calculate_sac(observations = fauna[[i]], 
-                              survey_ref = surveys[[i]],
-                              specify_town = unique$town[j], 
-                              specify_round = unique$round[j], 
-                              specify_priority = unique$priority[j])
-    
-    # bind to plot_sac & overwrite
-    results <- results %>%
-      bind_rows(sac_data)
-    
-    rm(sac_data)
-  }
-  
-  results
-}
-
-# unlist & calc mean across iterations
-plot_sac <- plot_sac %>% 
-  map_dfr(~ bind_rows(.), .id = "iteration") %>% 
-  mutate(iteration = as.numeric(iteration)) %>% 
-  group_by(town, round, priority, sites) %>% 
-  summarise(mean = mean(richness),
-            sd = sd(richness, na.rm = TRUE))
-
+```{r}
+head(plot_sac)
 ```
 
-![Species accumulation curves compare total, or 'gamma', diversity for the total sampling area, while accounting for differences in sampling effort. The mean species richness (line) and two standard deviations of the mean (shaded region) across all iterations are shown. Note that the scale of the y-axis varies between taxa.](sac-sample-plot.png){#id .class width=80% height=80%}
+
+<br>
+
+## Make comparisons
+
+For each animal group, we can only compare between the survey areas/periods based on similar levels of sampling effort. Thus, we need to extract the estimates (column `richness`) which have a similar value for the column `sites`. To improve the certainty of comparisons, the sampling effort used for comparisons should be as high as possible (where the curves plateau); accordingly, choose the highest available value for `sites` that are present among all grouping variables (area, period, taxon):
+
+```{r extract max of min. sites per area/period/taxon, message = FALSE}
+n_refer <- plot_sac %>%
+  group_by(area, period, taxon) %>%
+  summarise(n_max = max(sites)) %>% # highest value for 'sites' across grouping vars
+  group_by(area, period, taxon) %>%
+  summarise(sites = min(n_max)) %>% # lowest common denominator among the grouping vars (value for 'sites' present among all)
+  group_by(taxon) %>%
+  summarise(sites = min(sites)) %>% # analyse each taxon separately
+  inner_join(plot_sac) # join data of 'richness' for all grouping variables at corresponding value for 'sites'
+```
+
+The resulting dataframe `n_refer` allows direct comparisons to be made between the different areas/periods, based on the estimated number of species (column `richness`):
+
+```{r}
+n_refer
+```
+
+Finally, the species accumulation curves (`plot_sac`) and comparisons based on similar sampling efforts (`n_refer`) can be visualised:
+
+```{r species accumulation curves_filtered, message=FALSE, warning = FALSE, dpi = 300, fig.width=9, fig.height = 6, out.width="100%", fig.cap="**Figure: Species accumulation curves showing the number of species for each area and taxon, across two survey periods.** The average number of species (solid lines) and two standard deviations of the mean (shaded region) are shown. Note that the scale of the y-axis varies between the animal groups."}
+
+plot_sac %>%
+  
+  ggplot() +
+    facet_grid(taxon ~ area, scales = "free_y") +
+    geom_line(aes(x = sites, y = richness, color = factor(period))) +
+    geom_ribbon(aes(x = sites,
+                    ymin = (richness - 2 * sd),
+                    ymax = (richness + 2 * sd),
+                    fill = factor(period)),
+                alpha = 0.2) +
+    geom_point(data = n_refer,
+               aes(x = sites, y = richness), shape = 4) +
+    geom_segment(data = n_refer,
+                 aes(x = sites, y = 0, xend = sites, yend = richness),
+                 linetype = "dashed") +
+    geom_segment(data = n_refer,
+                 aes(x = 0, y = richness, xend = sites, yend = richness), 
+                 linetype = "dashed") +
+    ylab("Cumulative no. of species") + 
+    xlab("No. of surveys") +
+    labs(color = "Survey\nPeriod", fill = "Survey\nPeriod") +
+    theme_bw() + 
+    theme(panel.grid.major.x = element_blank(),
+          panel.grid.minor.x = element_blank())
+```
+<br>
+
+Note that some of the curves have yet to reach a clear plateau, despite the high sampling effort. At each of the six towns (`area`), six surveys (`cycles`) were conducted per sampling point (`point_id`), per survey `period` (duration of one year). This was conducted for each of the four animal groups (column `taxon`): Birds (Aves), Butterflies (Lepidoptera), Odonates (Odonata) and Amphibians (Amphibia).
+
+
+
+
